# KindaThreads

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2024_07_22_1318-b7c71f9f23fc_create_test_tables.py  2024_07_22_1319-13e0599f3aaa_create_test_tables.py  2024_07_22_1319-a60613aa8eb0_create_test_tables.py  2024_07_22_1407-ac7f0740221e_create_test_tables.py  2024_07_22_1407-eae7f7e02c98_create_test_tables.py  2024_07_22_1409-c9b0d0050eb9_create_test_tables.py  2024_07_22_1412-ce45ad06291b_create_test_tables.py  2024_07_22_1413-c04241bc2567_create_test_tables.py  2024_07_22_1414-602bc143488a_create_test_tables.py  2024_07_22_1415-89a55a8a07b0_create_test_tables.py  2024_07_22_1416-5ebe9746dc48_create_test_tables.py  2024_07_22_1451-b4d793726b93_create_test_tables.py  2024_07_22_1451-d3596fde40e2_create_test_tables.py  2024_07_22_1452-f2d24433b07f_create_test_tables.py  2024_07_22_1454-8dd792ccc7cd_create_test_tables.py  2024_07_22_1457-48967ed70caf_create_test_tables.py  2024_07_22_1519-2d2ffc2f7339_create_test_tables.py  2024_07_22_1522-0a12e5151745_create_test_tables.py  2024_07_22_1523-140da443e916_create_test_tables.py  2024_07_22_1523-23fb38b76cea_create_test_tables.py  2024_07_22_1527-80d244484ef7_create_test_tables.py  2024_07_22_1527-e230912fc07b_create_test_tables.py  2024_07_22_1528-1c2b204fcf29_create_test_tables.py  2024_07_22_1528-692e11467754_create_test_tables.py  (+43 more)
app/: .env.tempate  main.py
app/auth/: auth.py  (+1 more)
tests/: .test.env.template  conftest.py  test_main.py
(+19 files in other folders)
