[tool.poetry]
name = "KindaThreads"
version = "0.1.0"
description = ""
authors = ["Anastasiia a.o.olifir@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = {extras = ["email"], version = "^2.0.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
